MCP server, compiler loci, Ctrl-O output peek and WorkspaceExecute
- The engine serves MCP on /mcp: jk_bind, jk_status, jk_diagnostics,
  jk_run and jk_job with wait and cancel, reads, manifest, machine and
  jdk/disk kinds; every job is journaled and wait attaches to its jid.
- CompilerLocus parses file, line and column from compiler output; the
  CLI prints them and the dashboard shows Monaco snippets with notes.
- Live plans have a Ctrl-O process-output window ([config] build-output
  opens it by default); Ctrl-C cancels the job and paints it cancelled.
- Build-family commands and HTTP native jobs share one WorkspaceExecute
  path; native eligibility comes from the resolved terminal set.
- Self-update prefers .xz; the timeline file is jk-profile.json.

Tickets: JK-2005, JK-2006, JK-2007, JK-2008, JK-2009, JK-2012, JK-2021, JK-2022, JK-2023, JK-2024, JK-2025, JK-2026, JK-2027, JK-2028, JK-2029, JK-2030, JK-2031, JK-2032, JK-2033, JK-2034, JK-2035, JK-2036, JK-2037, JK-2038, JK-2039, JK-2040, JK-2041, JK-2042, JK-2044, JK-2045, JK-2046, JK-2047, JK-2048, JK-2049, JK-2050, JK-2051, JK-2052, JK-2053, JK-2054, JK-2055, JK-2056, JK-2057, JK-2058, JK-2059, JK-2060, JK-2061, JK-2062, JK-2063, JK-2064, JK-2065, JK-2066, JK-2067, JK-2068, JK-2069, JK-2070, JK-2071, JK-2072, JK-2073, JK-2074, JK-2075, JK-2077, JK-2083, JK-2084, JK-2085, JK-2086, JK-2087, JK-2088, JK-2089, JK-2090, JK-2091, JK-2092, JK-2093, JK-2094, JK-2095, JK-2096, JK-2097, JK-2098, JK-2099, JK-2105, JK-2107